--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,13 @@
     ],
     "rules":{
        "react/jsx-props-no-spreading":0,
-       "prettier/prettier":"error",
+       "prettier/prettier":[
+         "error",
+         {
+           "endOfLine": "auto"
+         }
+       ],
+       "react/prop-types": ["off"],
        "react/jsx-filename-extension":[
           1,
           {
