Intial Commit for react skill tes with theme, table for traits, manage columns

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,8 +22,11 @@
        "prettier"
     ],
     "rules":{
+       "react/prop-types": 0,
+       "react/self-closing-comp": 0,
        "react/jsx-props-no-spreading":0,
        "prettier/prettier":"error",
+       "jsx-a11y/label-has-associated-control":0,
        "react/jsx-filename-extension":[
           1,
           {
